fix: improve legibility of ui type

--- a/src/sass/_scheme.sass
+++ b/src/sass/_scheme.sass
@@ -8,6 +8,7 @@
 :root
   --font-family-default: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol"
   --font-family-mono: "SFMono-Regular", Menlo, Consolas, "PT Mono", "Liberation Mono", Courier, monospace
+  --font-weight-default: 400
 
   +perfersAndClass('light')
     --color-background: #ffffff
