--- a/src/sass/parts/content/_toolbar.sass
+++ b/src/sass/parts/content/_toolbar.sass
@@ -14,7 +14,7 @@
 .le__part__content__toolbar__label
   font-family: var(--font-family-default)
   font-size: $le-font-size-small
-  font-weight: 300
+  font-weight: var(--font-weight-default)
   margin: $le-space-medium 0 $le-space-medium $le-space-medium
   overflow: hidden
   text-overflow: ellipsis
