--- a/src/sass/parts/preview/_toolbar.sass
+++ b/src/sass/parts/preview/_toolbar.sass
@@ -14,7 +14,7 @@
   display: flex
   flex-flow: row
   font-size: $le-font-size-small
-  font-weight: 300
+  font-weight: var(--font-weight-default)
   margin: $le-space-medium
 
 .le__part__preview__toolbar__device
