--- a/src/sass/ui/_list.sass
+++ b/src/sass/ui/_list.sass
@@ -30,7 +30,7 @@
   flex-flow: row
 
   .le__list--menu &
-    font-weight: 300
+    font-weight: var(--font-weight-default)
 
   &--constrained
     max-height: 20vh
